Attempt to fix close button not being centered on mobile

--- a/src/components/explorer.module.scss
+++ b/src/components/explorer.module.scss
@@ -68,6 +68,7 @@
   background: none;
   color: #a6a6a6;
   border: none;
+  padding: 0;
 }
 
 .modal-close-button:hover {
